    - Added the ability to "favorite" an object for easy access later
    - Added browse-able search history, keeping track of the last 20 searches
    - Added setting to display internal prototype names instead of translations
    - Added object type glyphs
    - Added settings for toggling specific recipe categories
    - Added an in-game settings screen for on-the-fly changes
    - The GUI will remain open when clicking on a technology
  Changes:
    - Completely rewrote the mod from scratch to improve code quality, efficiency, and structure
    - Search and information are now combined into one window
    - Information listboxes are significantly wider and are arranged in a single column
    - Absolutely all recipes are now included in the Recipe Book data
    - Remote Interface:
      - The remote interface has received significant changes, refer to the documentation for more information
  Bugfixes:
    - Fixed several crashes related to GUI buttons and multiplayer latency

---------------------------------------------------------------------------------------------------
Version: 1.3.6
Date: 2020-06-24
  Bugfixes:
    - Fixed a crash related to GUI style changes in Factorio 0.18.33
    - Fixed typos in changelog
---------------------------------------------------------------------------------------------------
Version: 1.3.5
Date: 2020-06-19
  Features:
    - Added /RecipeBook command for diagnosing / fixing issues, use /help RecipeBook to see possible options
---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2020-06-11
  Bugfixes:
    - Fixed a crash when re-joining a multiplayer game for the second time after a mod configuration change
    - Fixed that loading certain scenarios would cause translations to be duplicated
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2020-05-31
  Changes: