@@ -1,0 +1,73 @@
+[mod-name]
+RecipeBook=Bauplanbuch
+
+[mod-description]
+RecipeBook=Suche Informationen über Materialien und Baupläne in einem sauberen und einfach zu nutzenden Interface. Ähnlich wie bei FNEI and What is it Really Used For.
+
+[controls]
+rb-toggle-gui=Bauplanbuch umschalten
+
+[mod-setting-name]
+rb-open-item-hotkey=Öffne gehaltenen Gegenstand, beim drücken des Hotkeys. [img=info]
+rb-open-fluid-hotkey=Öffne ausgewählte Flüssigkeit, beim drücken des Hotkeys. [img=info]
+rb-show-hidden-objects=Zeige versteckte Objekte
+rb-show-unresearched-objects=Zeige unerforschte Objekte
+rb-use-fuzzy-search=Nutze ungenaue Suche [img=info]
+rb-default-search-category=Standard Suchkategorie
+rb-show-internal-names=Zeige interne Namen [img=info]
+rb-show-glyphs=Zeige Objekttyp-Glyphen
+
+[mod-setting-description]
+rb-open-item-hotkey=Wenn aktiviert, wird beim drücken des Bauplanbuch Hotkeys, wenn man einen Gegenstand in der Hand hält, dessen Materialseite geöffnet, wenn Sie existiert.\nDu kannst dies auch machen, wenn du die BB Abkürzung drückst, wenn du einen Gegenstand in der Hand hälst.
+rb-open-fluid-hotkey=Wenn aktiviert, wird beim drücken des Bauplanbuch Hotkeys, wenn man über einem Rohr, einer Pumpe, einem Lagertank, oder einem Tangwaggon schwebt, dessen Materialseite geöffnet, wenn Sie existiert.
+rb-use-fuzzy-search=Mildere Mustererkennung für Suchvorgänge.
+rb-show-internal-names=Zeige die internen Prototypennamen von jedem Objekt, anstatt der Übersetzung. Du kannst weiterhin die Übersetzung sehen, in dem Objekt Tooltip.
+
+[shortcut-name]
+rb-toggle-gui=Bauplanbuch
+
+[rb-gui]
+add-to-favorites=Füge es zu den Favoriten hinzu
+back-to=Zürck zu __1__\nRechtsklick um auf Home zu gelangen
+close-quick-reference=Schließen der Schnellreferenztafel
+fluid=Flüssigkeit
+forward-to=Weiter zu __1__
+general=Allgemeines
+hidden-abbrev=V
+hidden=Versteckt
+history=Verlauf
+home=Home
+ingredient-in=Zutat in (__1__)
+ingredients=Zutaten (__1__)
+item=Gegenstand
+keep-open=Offen behalten
+machine=Maschine
+made-in=Gemacht in (__1__)
+material-lowercase=material
+material=Material
+mined-from=Abgebaut von (__1__)
+open-quick-reference=Öffne eine Schnellreferenztafel
+product-of=Produkt von (__1__)
+products=Produkte (__1__)
+pumped-by=Gepumpt von (__1__)
+recipe-categories-tooltip=Deaktivieren Sie eine Blauplankategorie, um Sie sowohl auf der Such- als auch auf der Informationsseite auszublenden.
+recipe-categories=Bauplankategorien [img=info]
+recipe-lowercase=bauplan
+recipe=Bauplan
+remove-from-favorites=Von den Favoriten entfernen
+resource=Rohstoff
+results-limited=Ergebnisse limitiert auf __1__ Gegenstände
+search-by=Suche nach:
+search=Suche
+settings=Einstellungen
+technology=Technologie
+unresearched=Nicht erforscht
+unlocked-by=Freigeschaltet von (__1__)
+view-details=Zeige Einzelheiten
+
+[rb-message]
+can-open-gui=Das Bauplanbuch ist nun verfügbar!
+cannot-open-gui=Kann das Bauplänebuch aktuell nicht öffnen, bitte warten. Wenn dies länger als ein paar Minuten andauert, führe den [color=128, 206, 240]/RecipeBook refresh-player-data[/color] Befehl aus.
+command-help= <parameter>\nrefresh-player-data - Schließen und neu erzeugen aller GUIs, das Wörterbuch erneut übersetzen und die Einstellungen aktualisieren.
+invalid-command=Ungültiger Befehl, Invalid command, geben Sie [color=128, 206, 240]/help RecipeBook[/color] ein, um die verfügbaren Befehle zu anzuzeigen.
+refreshing-player-data=Aktualisiere die Spielerdaten, bitte warten...
