@@ -1,0 +1,6 @@
+{
+  "language-name": "German",
+  "font": {
+    "RecipeBook": ["__RecipeBook__/fonts/RecipeBook.ttf"]
+  }
+}
