@@ -44,6 +44,7 @@ item=Item
 keep-open=Keep open
 machine=Machine
 made-in=Made in (__1__)
+material-lowercase=material
 material=Material
 mined-from=Mined from (__1__)
 open-quick-reference=Open quick reference panel
@@ -52,6 +53,7 @@ products=Products (__1__)
 pumped-by=Pumped by (__1__)
 recipe-categories-tooltip=Uncheck a recipe category to hide it from both search and information pages.
 recipe-categories=Recipe categories [img=info]
+recipe-lowercase=recipe
 recipe=Recipe
 remove-from-favorites=Remove from favorites
 resource=Resource
@@ -66,7 +68,7 @@ view-details=View details
 
 [rb-message]
 can-open-gui=Recipe Book is now available!
-cannot-open-gui=Cannot open Recipe Book yet, please wait. If this persists for more than a few minutes, run the /RecipeBook refresh-player-data command.
+cannot-open-gui=Cannot open Recipe Book yet, please wait. If this persists for more than a few minutes, run the [color=128, 206, 240]/RecipeBook refresh-player-data[/color] command.
 command-help= <parameter>\nrefresh-player-data - close and recreate all GUIs, retranslate dictionaries, and update settings.
-invalid-command=Invalid command, type /help RecipeBook to see available commands.
+invalid-command=Invalid command, type [color=128, 206, 240]/help RecipeBook[/color] to see available commands.
 refreshing-player-data=Refreshing player data, please wait...
