@@ -107,7 +107,8 @@ function search_page.build()
     {type="frame", style="subheader_frame", children={
       {type="label", style="subheader_caption_label", caption={"rb-gui.search-by"}},
       {template="pushers.horizontal"},
-      {type="drop-down", items=constants.search_categories, selected_index=2, handlers="search.category_drop_down", save_as="search.category_drop_down"}
+      {type="drop-down", items=constants.search_categories_localised, selected_index=2, handlers="search.category_drop_down",
+        save_as="search.category_drop_down"}
     }},
     {type="flow", style="rb_search_content_flow", direction="vertical", children={
       {type="textfield", style="rb_search_textfield", handlers="search.textfield", save_as="search.textfield"},
